--- a/web-dev/index.html
+++ b/web-dev/index.html
@@ -1,13 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>My Blog</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-    </body>
-    <script src="index.js"></script>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Blog</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="topnav">
+        <ul>
+            <li><a href="https://www.linkedin.com/in/makdadejene">Background</a>
+            <li><a class="Hobbies"> Hobbies</a></li>
+            <a class="Plans"> Plans</a>
+        </ul>
+    </div>
+    <h1>Makda's World</h1>
+
+
+    <div class="collage">
+        <figure class="collage_1">
+            <img
+                src="https://images.pexels.com/photos/3640930/pexels-photo-3640930.jpeg?cs=srgb&dl=pexels-ena-marinkovic-3640930.jpg&fm=jpg">
+        </figure>
+        <figure class="collage_2">
+            <img
+                src="https://images.pexels.com/photos/3910065/pexels-photo-3910065.jpeg?cs=srgb&dl=pexels-valeriia-miller-3910065.jpg&fm=jpg">
+        </figure>
+        <figure class="collage_3">
+            <img src="https://img.freepik.com/premium-photo/sunset-sky-shot-clouds-generative-ai_384720-686.jpg?w=2000">
+        </figure>
+        <figure class="collage_4">
+            <img src="https://wallpaperaccess.com/full/84248.png">
+        </figure>
+        <figure class="collage_5">
+            <img src="https://allbusinessnames.com/storage/2022/03/Aesthetic-Group-Names-ideas-scaled.jpg">
+        </figure>
+    </div>
+
+    <label for="search"> Search: </label>
+    <input type="text" id=" " search" name="search">
+    <!-- <div class="row">
+        <div class="column">
+            <img
+                src="https://images.pexels.com/photos/3640930/pexels-photo-3640930.jpeg?cs=srgb&dl=pexels-ena-marinkovic-3640930.jpg&fm=jpg">
+            <imh
+                src="https://images.pexels.com/photos/3910065/pexels-photo-3910065.jpeg?cs=srgb&dl=pexels-valeriia-miller-3910065.jpg&fm=jpg">
+                </img>
+        </div>
+    </div> -->
+    <!-- 
+    <ul>
+        <li>Background</li>
+        <li>Hobbies</li>
+        <li>Plans</li>
+    </ul> -->
+    <!-- <ol>
+        <li>Vision Board
+
+        </li>
+        <li>Contact Me</li>
+    </ol>
+
+    <table>
+        <tr>
+            <th>Day</th>
+            <th>Events</th>
+        </tr>
+        <tr>
+            <td>Monday</td>
+            <td>Have fun</td>
+        </tr>
+    </table> -->
+</body>
+<script src="index.js"></script>
+
 </html>
